// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoggedInLinks /> Check how renders Should render version for user with status active 1`] = `
<DocumentFragment>
  <nav
    class="sc-AxgMl hNnkGn"
  >
    <a
      class="sc-AxiKw lkoKWO"
      data-testid="CartLink"
    >
      <div
        class="sc-AxjAm caUblA"
        color=""
      >
        <svg>
          cart.svg
        </svg>
      </div>
    </a>
    <div
      class="sc-AxheI tBqCM"
      data-testid="LoggedInLinks-user-box"
      id="user"
    >
      <span
        class="sc-AxhUy cIjsLD"
        color=""
        display="inline-block"
        overflow="hidden"
        size="3"
        spacing="0px"
        transform=""
      >
        username
      </span>
      <div
        class="sc-AxjAm hoAOPi"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
      <div />
    </div>
  </nav>
</DocumentFragment>
`;

exports[`<LoggedInLinks /> Check how renders Should render version for user with status pending 1`] = `
<DocumentFragment>
  <nav
    class="sc-AxgMl hNnkGn"
  >
    <a
      data-testid="LoggedInLinks-my-account-link"
    >
      <div
        class="sc-AxheI tBqCM"
        id="user"
      >
        <span
          class="sc-AxhUy cIjsLD"
          color=""
          display="inline-block"
          overflow="hidden"
          size="3"
          spacing="0px"
          transform=""
        >
          username
        </span>
        <div
          class="sc-AxjAm gdfHmM"
          color=""
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </a>
  </nav>
</DocumentFragment>
`;
